# NIM_Duilib_Framework

./: CMakeLists.txt  CreateMakeList.py
base/: CMakeLists.txt
base/util/: string_util.cpp
duilib/: CMakeLists.txt
duilib/Core/: GlobalManager.cpp
duilib/Utils/: WinImplBase.cpp  WinImplBase.h
examples/basic/: CMakeLists.txt
examples/cef/: CMakeLists.txt
examples/controls/: CMakeLists.txt
examples/controls2/: CMakeLists.txt  about_form.cpp  about_form.h  controls_form.cpp  controls_form.h
examples/datetime/: CMakeLists.txt
examples/grid/: CMakeLists.txt
examples/move_control/: CMakeLists.txt
examples/multi_browser/: CMakeLists.txt
examples/multi_browser/browser/: browser_box.cpp  custom_layout.cpp  multi_browser_form.cpp  multi_browser_form_dragdrop.cpp  multi_browser_manager.cpp
examples/multi_browser/control/: browser_tab_item.cpp
examples/multi_browser/dragdrop/: bitmap_control.cpp  drag_drop.cpp  drag_form.cpp
examples/multi_browser/taskbar/: dwm_util.cpp  taskbar_manager.cpp  taskbar_manager.h
examples/popover/: CMakeLists.txt
examples/richlist/: CMakeLists.txt
examples/virtualbox/: CMakeLists.txt
ui_components/: CMakeLists.txt
ui_components/cef_control/handler/: browser_handler.h
ui_components/cef_control/manager/: cef_manager.cpp
