cmake_minimum_required(VERSION 3.10)
project(duilib)

include_directories(${CMAKE_CURRENT_LIST_DIR})
include_directories(${CMAKE_CURRENT_LIST_DIR}/../)

source_group("" FILES
    ${CMAKE_CURRENT_LIST_DIR}/./StdAfx.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./StdAfx.h
    ${CMAKE_CURRENT_LIST_DIR}/./UIlib.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./UIlib.h
)

source_group("Animation" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationPlayer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationPlayer.h
)

source_group("Automation" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIABoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIABoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAButtonProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAButtonProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIACheckBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIACheckBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAComboBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAComboBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAControlProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAControlProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIALabelProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIALabelProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxItemProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxItemProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAProgressProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAProgressProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIARichEditProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIARichEditProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollableBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollableBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollBarProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollBarProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIATreeNodeProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIATreeNodeProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAWindowProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAWindowProvider.h
)

source_group("Box" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Box/ChildBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/ChildBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/HBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/HBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/TabBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/TabBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/TileBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/TileBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/VBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/VBox.h
)

source_group("Control" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Control/Button.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/CheckBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/CircleProgress.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/CircleProgress.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Combo.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Combo.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Label.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/List.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/List.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Menu.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Menu.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Option.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Progress.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Progress.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/RichEdit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/RichEdit.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/ScrollBar.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/ScrollBar.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Slider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Slider.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/TreeView.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/TreeView.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualListBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualListBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualTileBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualTileBox.h
)

source_group("Core" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Core/Box.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Box.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Control.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Control.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Define.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Define.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/GlobalManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/GlobalManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Image.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Image.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Markup.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Markup.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Placeholder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Placeholder.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Window.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Window.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/WindowBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/WindowBuilder.h
)

source_group("Render" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Render/Bitmap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Bitmap.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Brush.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Brush.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Clip.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Clip.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Factory.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/IRender.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/IRender.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Matrix.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Matrix.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/nanosvg.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/nanosvgrast.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Path.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Path.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Pen.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Pen.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Render.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Render.h
)

source_group("Utils" FILES
    ${CMAKE_CURRENT_LIST_DIR}/Utils/ApiWrapper.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/ApiWrapper.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/BoxShadow.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/BoxShadow.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Delegate.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/DpiManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/DpiManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/FontManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/FontManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/GdiHepler.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/GdiHepler.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Macros.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/MultiLangSupport.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/MultiLangSupport.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/OnScreenKeyboardManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/OnScreenKeyboardManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Shadow.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Shadow.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/StringUtil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/StringUtil.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/SvgUtil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/SvgUtil.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/TimerManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/TimerManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/UnZip.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/UnZip.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Utils.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/VersionHelpers.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/WinImplBase.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/WinImplBase.h
)

set(SOURCE_FILES
    ${CMAKE_CURRENT_LIST_DIR}/./StdAfx.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./StdAfx.h
    ${CMAKE_CURRENT_LIST_DIR}/./UIlib.cpp
    ${CMAKE_CURRENT_LIST_DIR}/./UIlib.h
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationPlayer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Animation/AnimationPlayer.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIABoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIABoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAButtonProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAButtonProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIACheckBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIACheckBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAComboBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAComboBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAControlProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAControlProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIALabelProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIALabelProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxItemProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxItemProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAListBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAProgressProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAProgressProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIARichEditProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIARichEditProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollableBoxProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollableBoxProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollBarProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAScrollBarProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIATreeNodeProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIATreeNodeProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAWindowProvider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Automation/UIAWindowProvider.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/ChildBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/ChildBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/HBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/HBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/TabBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/TabBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/TileBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/TileBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Box/VBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Box/VBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Button.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/CheckBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/CircleProgress.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/CircleProgress.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Combo.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Combo.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Label.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/List.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/List.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Menu.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Menu.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Option.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Progress.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Progress.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/RichEdit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/RichEdit.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/ScrollBar.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/ScrollBar.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/Slider.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/Slider.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/TreeView.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/TreeView.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualListBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualListBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualTileBox.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Control/VirtualTileBox.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Box.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Box.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Control.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Control.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Define.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Define.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/GlobalManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/GlobalManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Image.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Image.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Markup.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Markup.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Placeholder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Placeholder.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/Window.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/Window.h
    ${CMAKE_CURRENT_LIST_DIR}/Core/WindowBuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Core/WindowBuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Bitmap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Bitmap.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Brush.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Brush.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Clip.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Clip.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Factory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Factory.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/IRender.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/IRender.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Matrix.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Matrix.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/nanosvg.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/nanosvgrast.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Path.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Path.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Pen.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Pen.h
    ${CMAKE_CURRENT_LIST_DIR}/Render/Render.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Render/Render.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/ApiWrapper.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/ApiWrapper.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/BoxShadow.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/BoxShadow.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Delegate.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/DpiManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/DpiManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/FontManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/FontManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/GdiHepler.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/GdiHepler.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Macros.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/MultiLangSupport.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/MultiLangSupport.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/OnScreenKeyboardManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/OnScreenKeyboardManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Shadow.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Shadow.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/StringUtil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/StringUtil.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/SvgUtil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/SvgUtil.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/TimerManager.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/TimerManager.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/UnZip.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/UnZip.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/Utils.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/VersionHelpers.h
    ${CMAKE_CURRENT_LIST_DIR}/Utils/WinImplBase.cpp
    ${CMAKE_CURRENT_LIST_DIR}/Utils/WinImplBase.h
)

add_library(${PROJECT_NAME} ${SOURCE_FILES})

target_link_libraries(${PROJECT_NAME} comctl32)
target_link_libraries(${PROJECT_NAME} gdiplus)
target_link_libraries(${PROJECT_NAME} shlwapi)
target_link_libraries(${PROJECT_NAME} imm32)
target_link_libraries(${PROJECT_NAME} Msimg32)
